--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Dropbox</title>
   </head>
-  
+
   <body>
-  
+
+    <header>
+
+      <div>
+        <span><img src="img/logo-small.png" alt="" class="dp-logo"></span>
+        <span>Perchè Dropbox</span>
+        <span>Funzioni</span>
+        <span>Piani e prezzi</span>
+      </div>
+
+      <div>
+          <span>Supporto</span>
+          <span>Contatta l'ufficio vendite</span>
+          <span>Accedi</span>
+          <button>Inizia</button>
+      </div>
+
+    </header>
+
   </body>
 </html>
