--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
   </head>
 
   <body>
-
-    <header>
-
-      <div>
-        <span><img src="img/logo-small.png" alt="" class="dp-logo"></span>
-        <span>Perchè Dropbox</span>
-        <span>Funzioni</span>
-        <span>Piani e prezzi</span>
+  
+  <header>
+    <div class="container-h">
+      <div class="logo-d">
+        <a href="#"><img src="img/logo-small.png"></a>
       </div>
-
-      <div>
-          <span>Supporto</span>
-          <span>Contatta l'ufficio vendite</span>
-          <span>Accedi</span>
-          <button>Inizia</button>
-      </div>
-
-    </header>
-
+      <nav>
+        <ul class="nav-left">
+          <li><a href="#">Perchè Dropbox?</a></li>
+          <li><a href="#">Funzioni</a></li>
+          <li><a href="#">Piani e prezzi</a></li>
+        </ul>
+        <a href="#" class="button blue">Inizia</a>
+        <ul class="nav-right">
+          <li><a href="#">Supporto</a></li>
+          <li><a href="#">Contatta l'ufficio vendite</a></li>
+          <li><a href="#">Accedi</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  
   </body>
 </html>
